CHANGELOG
Note : this project started in October 2016.
Many improvements have been done since this date until August 2018.
Then the project has been refreshed in March 2019 with major modifications, in a more pythonic way.

22/04/2019
    In software_scan.py module
        Code correction in softwareInit() to improve software table display
        Code correction in searchSoftware() to get software without version

21/04/2019
    In writer.py module
        Clean code
            Functions removed
                writeFinalLog
                copyFile
        English doctrings
            prepaLogScan
            write
            writeLog
    In scan.py module
        English doctrings
            detectOS
    In av_date.py module
        Clean code
            Function removed
                initMcAfee
    In complement.py module
        Clean code
            Removed 2 global vars "username" and "computername"
            Replace "elemInLog" function name by "elemInList"
    In scans.py module
        Clean code
            Removed socket import
        update doctrings
        hotFixesInfo()
            Change KB date format : m/d/Y to Y-m-d
        servicesInfo(), processInfo() & portsInfo()
            Improve display
            Now return the list of elements found
            Show total number of elements found before listing
    In verif.py module
        English doctrings
    Better display of the final log
    Scanning time show at the end of the log

20/03/2019 to 20/04/2019
    First commit
    Major modifications 
        Many system calls replace by Python modules : only 3 left !
        Functions with French and English doctrings
        One unique log file is now generated during the all process
        The scan take less much time than before